--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
     sdk: flutter
   flutter_bloc: 8.1.3
   flutter_dotenv: ^5.1.0
+  flutter_screenutil: ^5.9.0
   freezed_annotation: ^2.4.1
   go_router: ^12.0.0
   google_fonts: ^6.1.0
@@ -42,6 +43,8 @@ dependencies:
   http: ^1.1.0
   hydrated_bloc: ^9.1.2
   shimmer: ^3.0.0
+  http_interceptor: 2.0.0-beta.8
+  flutter_animate: ^4.5.0
 
 dev_dependencies:
   build_runner: ^2.4.6
