--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,18 +33,19 @@ dependencies:
   faker: ^2.1.0
   flutter:
     sdk: flutter
+  flutter_animate: ^4.5.0
   flutter_bloc: 8.1.3
   flutter_dotenv: ^5.1.0
   flutter_screenutil: ^5.9.0
+  flutter_spinkit: ^5.2.0
   freezed_annotation: ^2.4.1
   go_router: ^12.0.0
   google_fonts: ^6.1.0
   hive_flutter: ^1.1.0
   http: ^1.1.0
+  http_interceptor: 2.0.0-beta.8
   hydrated_bloc: ^9.1.2
   shimmer: ^3.0.0
-  http_interceptor: 2.0.0-beta.8
-  flutter_animate: ^4.5.0
 
 dev_dependencies:
   build_runner: ^2.4.6
