--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   http: ^1.1.0
   http_interceptor: 2.0.0-beta.8
   hydrated_bloc: ^9.1.2
+  intl: ^0.19.0
   shimmer: ^3.0.0
 
 dev_dependencies:
