--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   flutter_dotenv: ^5.1.0
   flutter_screenutil: ^5.9.0
   flutter_spinkit: ^5.2.0
+  geolocator: ^11.0.0
   freezed_annotation: ^2.4.1
   go_router: ^12.0.0
   google_fonts: ^6.1.0
