--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   hydrated_bloc: ^9.1.2
   intl: ^0.19.0
   shimmer: ^3.0.0
+  uuid: ^4.2.2
 
 dev_dependencies:
   build_runner: ^2.4.6
