--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   http: ^1.1.0
   http_interceptor: 2.0.0-beta.8
   hydrated_bloc: ^9.1.2
+  flutter_native_splash: ^2.3.7
   intl: ^0.19.0
   shimmer: ^3.0.0
   uuid: ^4.2.2
@@ -75,6 +76,8 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
+
+
 
   # To add assets to your application, add an assets section, like this:
   assets:
@@ -104,3 +107,7 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
+
+flutter_native_splash:
+  color: "#000000"
+  color_dark: "#000000"
