added token interceptor

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -23,8 +23,9 @@ if (flutterVersionName == null) {
 }
 
 android {
-    namespace "com.example.kula"
-    compileSdkVersion flutter.compileSdkVersion
+    namespace "com.kula.app"
+    compileSdkVersion 34
+    // compileSdkVersion flutter.compileSdkVersion
     ndkVersion flutter.ndkVersion
 
     compileOptions {
@@ -41,14 +42,18 @@ android {
     }
 
     defaultConfig {
-        // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
-        applicationId "com.example.kula"
+        applicationId "com.kula.app"
         // You can update the following values to match your application needs.
         // For more information, see: https://docs.flutter.dev/deployment/android#reviewing-the-gradle-build-configuration.
         minSdkVersion flutter.minSdkVersion
         targetSdkVersion flutter.targetSdkVersion
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
+        multiDexEnabled true
+    //     ndk {
+    //     abiFilters 'x86', 'armeabi-v7a'
+    // }
+
     }
 
     buildTypes {
