--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,9 +36,10 @@ dependencies:
   flutter_animate: ^4.5.0
   flutter_bloc: 8.1.3
   flutter_dotenv: ^5.1.0
+  flutter_native_splash: ^2.3.7
   flutter_screenutil: ^5.9.0
   flutter_spinkit: ^5.2.0
-  flutter_widget_from_html: ^0.14.6 
+  flutter_widget_from_html: ^0.14.6
   flutterwave_standard: ^1.0.8
   freezed_annotation: ^2.4.1
   geolocator: ^11.0.0
@@ -46,10 +47,9 @@ dependencies:
   google_fonts: 6.1.0
   hive_flutter: ^1.1.0
   http: ^1.1.0
-  http_interceptor: 2.0.0-beta.8
   hydrated_bloc: ^9.1.2
-  flutter_native_splash: ^2.3.7
-  intl: ^0.19.0
+  intl: ^0.18.1
+  path_provider: ^2.1.3
   shimmer: ^3.0.0
   uuid: ^4.2.2
 
@@ -76,8 +76,6 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
-
-
 
   # To add assets to your application, add an assets section, like this:
   assets:
@@ -107,7 +105,6 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
-
 flutter_native_splash:
   color: "#000000"
   color_dark: "#000000"
